<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.5.7</version>
    <relativePath/>
  </parent>

  <groupId>xyz.yychainsaw</groupId>
  <artifactId>portfolio-backend-parent</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <modules>
    <module>portfolio-pojo</module>
    <module>portfolio-common</module>
    <module>portfolio-server</module>
  </modules>

  <properties>
    <java.version>17</java.version>
    <maven.compiler.release>17</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <mybatis-plus.version>3.5.7</mybatis-plus.version>
    <springdoc.version>2.8.5</springdoc.version>
    <tencent-cos.version>5.6.227</tencent-cos.version>
    <totp.version>1.7.1</totp.version>
    <bouncycastle.version>1.84</bouncycastle.version>
    <testcontainers.version>1.21.4</testcontainers.version>
    <maven-enforcer.version>3.5.0</maven-enforcer.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>xyz.yychainsaw</groupId>
        <artifactId>portfolio-pojo</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>xyz.yychainsaw</groupId>
        <artifactId>portfolio-common</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.baomidou</groupId>
        <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
        <version>${mybatis-plus.version}</version>
      </dependency>
      <dependency>
        <groupId>org.springdoc</groupId>
        <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
        <version>${springdoc.version}</version>
      </dependency>
      <dependency>
        <groupId>com.qcloud</groupId>
        <artifactId>cos_api</artifactId>
        <version>${tencent-cos.version}</version>
      </dependency>
      <dependency>
        <groupId>dev.samstevens.totp</groupId>
        <artifactId>totp</artifactId>
        <version>${totp.version}</version>
      </dependency>
      <dependency>
        <groupId>org.bouncycastle</groupId>
        <artifactId>bcprov-jdk18on</artifactId>
        <version>${bouncycastle.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <version>${maven-enforcer.version}</version>
        <executions>
          <execution>
            <id>enforce-build-and-dependencies</id>
            <goals><goal>enforce</goal></goals>
            <configuration>
              <rules>
                <requireJavaVersion><version>[17,18)</version></requireJavaVersion>
                <requireMavenVersion><version>[3.9.11,3.10)</version></requireMavenVersion>
                <bannedDependencies>
                  <excludes>
                    <exclude>com.alibaba:fastjson</exclude>
                    <exclude>com.auth0:java-jwt</exclude>
                  </excludes>
                  <searchTransitive>true</searchTransitive>
                </bannedDependencies>
              </rules>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
